fixed the add link modal by adding a wider-box class in order to fit both the protocol select and the host input in one line without overflowing the box

--- a/imports/styles/components/_boxed-view.scss
+++ b/imports/styles/components/_boxed-view.scss
@@ -18,6 +18,9 @@
     padding: 2.4rem 5rem;
     text-align: center;
     width: 24rem;
+    &.wider-box {
+        width:30rem;
+    }
 }
 
 .boxed-view__form {
@@ -27,10 +30,6 @@
 
 .boxed-view__child-container {
     display: flex;
-}
-
-.flex-child--expanded {
-    flex-grow: 1;
 }
 
 .boxed-view__error {
